--- a/themes/InterDead/layouts/_default/baseof.html
+++ b/themes/InterDead/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
     {{ partial "language-modal.html" . }}
     {{ partial "menu-modal.html" . }}
     {{ partial "age-gate.html" . }}
+    {{ partial "components/article-toc-script.html" . }}
     {{- $scriptAsset := .Scratch.Get "interdeadScript" -}}
     {{- if $scriptAsset -}}
     <script
