--- a/themes/InterDead/layouts/partials/widgets/stories.html
+++ b/themes/InterDead/layouts/partials/widgets/stories.html
@@ -34,7 +34,7 @@
     <section class="gm-section gm-stories gm-section--full" id="stories">
       <div class="gm-container gm-container--fluid">
         <div class="gm-stories__intro">
-          <h2 class="gm-section__title gm-title">{{ $section.Title }}</h2>
+          <h2 class="gm-section__title gm-title gm-section__title--prefixed">{{ $section.Title }}</h2>
         </div>
         <div class="gm-slider gm-slider--wide" aria-label="{{ $section.Title }}" aria-roledescription="carousel">
           <button class="gm-slider__nav gm-slider__nav--prev" aria-label="Previous">‹</button>
